--- a/style.css
+++ b/style.css
@@ -4,3 +4,54 @@
   box-sizing: border-box;
 }
 
+main {
+  width: 960px;
+  margin: 50px;
+}
+
+.list {
+margin-bottom: 50px;
+}
+
+.list1 {
+  width: 960px;
+  padding: 20px;
+  display: flex;
+  margin: 0 auto;
+  flex-wrap: wrap;
+  background-color: lightgray;
+}
+
+.list2 {
+  width: 960px;
+  padding: 20px;
+  display: flex;
+  margin: 0 auto;
+  flex-wrap: wrap;
+}
+
+.box-list {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.box {
+  background-color: gold;
+  width: 30%;
+  height: 200px;
+  margin-right: 5%;
+  margin-bottom: 40px;
+}
+
+.box:first-child,
+.box:nth-child(5),
+.box:last-child {
+  background-color: orange;
+}
+.box:nth-child(3n) {
+  margin-right: 0;
+}
+
+.box:nth-last-child(-n + 3) {
+  margin-bottom: 0;
+}
